feat: create getHEntries

--- a/src/test-data/html-quote.html
+++ b/src/test-data/html-quote.html
@@ -1,6 +1,6 @@
 <html>
   <body>
-    <blockquote>
+    <blockquote class="h-entry">
       I have something to say about this:
       <cite class="h-cite u-quotation-of">
         <a class="u-url" href="https://twitter.com/schnarfed/status/448205453911015425">
