feat: parse mentions

--- a/src/test-data/html-bookmark-cited.html
+++ b/src/test-data/html-bookmark-cited.html
@@ -1,7 +1,7 @@
 <html>
   <body>
     <div class="h-entry">
-      <a class="u-bookmark-of h-cite" href="https://www.digitalocean.com/community/tutorials/how-to-upgrade-ubuntu-12-04-lts-to-ubuntu-14-04-lts">
+      <a class="u-bookmark-of h-cite" href="http://example.com/note123">
         How to Upgrade Ubuntu 12.04 LTS to Ubuntu 14.04 LTS
       </a>
     </div>
