--- a/src/test-data/html-bookmark.html
+++ b/src/test-data/html-bookmark.html
@@ -1,7 +1,7 @@
 <html>
   <body>
     <div class="h-entry"> ... 
-      <a class="u-bookmark-of" href="https://someothersite.example.com/permalink47">...</a>
+      <a class="u-bookmark-of" href="http://example.com/note123">...</a>
      </div>
   </body>
 </html>
