--- a/src/test-data/html-like.html
+++ b/src/test-data/html-like.html
@@ -1,7 +1,7 @@
 <html>
   <body>
     <div class="h-entry">
-      <p class="p-summary"> Liked: <a class="u-like-of" href="http://othersite.example.com/permalink47">http://othersite.example.com/permalink47</a> </p>
+      <p class="p-summary"> Liked: <a class="u-like-of" href="http://example.com/note123">http://example.com/note123</a> </p>
     </div>
   </body>
 </html>
