--- a/src/test-data/html-quote.html
+++ b/src/test-data/html-quote.html
@@ -3,7 +3,7 @@
     <blockquote class="h-entry">
       I have something to say about this:
       <cite class="h-cite u-quotation-of">
-        <a class="u-url" href="https://twitter.com/schnarfed/status/448205453911015425">
+        <a class="u-url" href="http://example.com/note123">
           A provocative statement.
         </a>
       </cite>
