--- a/src/test-data/html-reaction.html
+++ b/src/test-data/html-reaction.html
@@ -4,7 +4,7 @@
       <span class="p-name p-content">👍</span>
       to 
       <a class="u-in-reply-to h-cite" 
-         href="http://tantek.com/2018/102/t9/css-2-2">CSS 2.2</a>
+         href="http://example.com/note123">CSS 2.2</a>
       ...
       <a class="u-url"
          href="...permalink of post...">
