--- a/src/test-data/html-repost-cited.html
+++ b/src/test-data/html-repost-cited.html
@@ -2,7 +2,7 @@
   <body>
     <div class="h-entry">
       <div class="h-cite u-repost-of">
-        Repost of <a class="u-url" href="https://example.com/post">a post</a> by
+        Repost of <a class="u-url" href="http://example.com/note123">a post</a> by
         <span class="p-author h-card">
           <a class="u-url p-name" href="https://example.com">Author Name</a>
         </span>:
