--- a/src/test-data/html-repost.html
+++ b/src/test-data/html-repost.html
@@ -2,7 +2,7 @@
   <body>
     <span class="h-entry"> ... 
       <a class="u-repost-of" 
-        href="http://anothersite.example.com/permalink47">...</a>
+        href="http://example.com/note123">...</a>
     </span>
   </body>
 </html>
