--- a/src/test-data/html-rsvp-invite.html
+++ b/src/test-data/html-rsvp-invite.html
@@ -8,7 +8,7 @@
         </a>
       </span>:
       RSVP <span class="p-rsvp">yes</span> 
-      to <a href="HTTP://EXAMPLE.ORG/EVENTURL" class="u-in-reply-to">INDIEWEB EVENT</a>
+      to <a href="http://example.com/note123" class="u-in-reply-to">INDIEWEB EVENT</a>
       <a class="u-invitee h-card" href="Alison-homepage-URL">Alison</a>
     </div>
   </body>
